# wildsim-audio

./: .gitignore  AUDIO_QUALITY_AUDIT_REPORT.md  CLAUDE.md  FOREST_ACOUSTIC_IMPROVEMENTS.md  LICENSE  README.md  SCENE_GENERATOR_IMPROVEMENTS.md  VOLUME_ISSUE_DIAGNOSIS.md  acoustic_scene_generator.py  analysis_page_clean.py  app.py  app_simple.py  auth_helpers.py  builder.py  config_builder.py  dataset_manager.py  debug_volume.py  demo_script.py  doc.md  enhanced_simulator.py  example_scene_generation.py  examples.py  hydraconf.py  integration_test.py  main.py  models.py  pyproject.toml  scene_creator.py  scene_generator.py  scene_generator_ui.py  scene_manager.py  setup_test_dataset.py  simple_app.py  simple_config.py  simple_simulator.py  sumulator.py  test_ambient_sounds.py  zodas.py  zodas_ui.py
configs/: config.yaml  multi_elephant.yaml  simple_elephant.yaml  test_scene.json
research/: MODULAR_STRUCTURE.md  UNIFIED_LABELING_SUMMARY.md  acoustic_scene_generator.py  catalog_wild_animals.py  complete_catalog_fix.py  diagnose_catalog_bug.py  find_audio_datasets.py  find_bird_datasets.py  fix_catalog.py  forest_dataset_renamer.py  forest_dataset_summary.md  inspect_xenocanto.py  simple_app_backup.py  test_audio_preview.py  test_catalog.py  test_kaggle_dataset.py  test_scene_creator.py  test_tiny_dataset.py  test_unified_labeling.py  test_urbansound_download.py  wild_animals_rename_summary.csv  wild_animals_renamer.py
test_realistic_volumes/: generated_scenes_5.jsonl  summary_5.json
test_selective_generation/: generated_scenes_2.jsonl  summary_2.json
(+51 files in other folders)
