[project]
name = "wildsim-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "huggingface-hub>=0.34.4",
    "hydra-core>=1.3.2",
    "kaggle>=1.7.4.5",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "pyroomacoustics>=0.8.4",
    "scipy>=1.16.1",
    "soundfile>=0.13.1",
    "streamlit>=1.49.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
]
